# rust-todo

./: .env  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  ReadMe.md
migrations/: 20240101000001_create_todos_table.sql
src/: main.rs
src/api/: mod.rs
src/api/error/: api_error.rs
src/api/handler/: todo_handler.rs
src/api/model/: request.rs  response.rs  todo.rs
src/api/router/: todo_router.rs
src/config/: error.rs  mod.rs
src/config/app/: app_configuration.rs  mod.rs
src/config/database/: database_configuration.rs  mod.rs
src/config/environment/: mod.rs  read.rs  variables.rs
src/config/root/: configuration.rs
src/database/: connection.rs
src/database/repository/: todo_repository.rs
